@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-02
+2012-03-14 Andy Salnikov
+- upgrade to pdsdata V03-03-01A
+  - new class timepix.ConfigV2
+
 Tag: V00-02-01
 2012-02-17 Andy Salnikov
 - upgrade to pdsdata V03-02-12
